--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1> Sample Blog</h1>
+<% provide(:title, "Home") %>
+
+<h1>Home</h1>
 <p>This is the home page for the <a href = "http://www.railstutorial.org/">Ruby On Rails</a> Sample Application</p>
+
