Finished Layout and Routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,13 @@
 
+<!--Sample App--->
 
-<h1>Home</h1>
-<p>This is the home page for the <a href = "http://www.railstutorial.org/">Ruby On Rails</a> Sample Application</p>
+<div class = "center jumbotron">
+    <h1> Welcome to the Firecaller Blog</h1>
+    <h2>
+        This is the home page for the Firecaller Blog, a blog for those that are a little bit into creativity or just want to meet some interesting people. 
+    </h2>
+   <%= link_to"Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
 
+
+<%= image_tag("image1.jpg", :alt => "logo") %>
