--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Sign Up For the Firecaller Blogs Here</h1>
-<p> Welcome to the Firecaller Blog application this is where we get our new users all signed up.</p>
+<h1>Users#new</h1>
+<p>Find me in app/views/users/new.html.erb</p>
